--- a/menu/index.html
+++ b/menu/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>JS Bin</title>
+<title>menu</title>
+  <link src="css.css">
 </head>
 <body>
   <menu class="main">
